# pottracker

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  after.json  alembic.ini  before.json  docker-compose.dev.yml  download  pyproject.toml
.github/workflows/: ci.yml
docs/: 01-architecture.md  02-data-model.md  03-focas-integration.md  04-api.md  05-ui-flows.md  06-phases.md  07-risks.md  08-glossary.md  architecture  todo.md
docs/runbooks/: phase-1-smoke.md
migrations/: _guard.py  env.py
migrations/versions/: 0001_shared_core.py  0002_shared_focas_state.py
reports/: viper-smoke-20260506-144132.json  viper-smoke-20260506-145529.json  viper-smoke-o1-final.json  viper-smoke-o1-resolved.json  viper-smoke-with-T-20260506-150211.json  viper-soak-60min.json
scripts/: extract_focas_signatures.py  focas_diag.py  focas_smoke.py  focas_soak.py  focas_soak_simple.py  probe_modal.py  probe_modal_v2.py  probe_modal_v3.py  probe_modal_v4.py  probe_modal_v5.py  probe_modal_v6.py  probe_modal_v7.py  probe_modal_v8.py  probe_modal_v9.py
shared/: audit.py
shared/focas/: client.py  ctypes_defs.py  errors.py  mock.py  models.py  poller.py
tasks/: lessons.md  spec-focas-calls.generated.md  spec-focas-calls.md  spec-phase-2.md  todo.md
tests/: test_alembic_guard.py  test_extract_focas_signatures.py  test_focas_smoke.py  test_migrations.py
tests/shared/focas/: test_client.py  test_ctypes_defs.py  test_errors.py  test_mock.py  test_models.py  test_poller.py
