[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lance-tooling"
version = "0.0.0"
description = "Tool library + offset registry management for Lance Industries CNC mills"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.30,<0.35",
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.2,<4.0",
    "python-jose[cryptography]>=3.3,<4.0",
]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    # Pinned exactly. Bump `.pre-commit-config.yaml` rev in lockstep.
    "ruff==0.6.9",
    "mypy>=1.10,<2.0",
]

[tool.setuptools.packages.find]
include = ["shared*", "apps*"]
exclude = ["tests*", "docs*", "tasks*", "migrations*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]
